Optimized body.